regolib: Rename `file.readall` to `file.read`
This makes the function name a little more general and will help us
avoid confusion in the future.

Signed-off-by: Juan Antonio Osorio <juan.osoriorobles@eu.equinix.com>

--- a/tests/data/v1/tricksets/codeql_analysis.yaml
+++ b/tests/data/v1/tricksets/codeql_analysis.yaml
@@ -16,7 +16,7 @@ rules:
 
       allow {
           some i
-          workflowstr := file.readall("./.github/workflows/codeql-analysis.yml")
+          workflowstr := file.read("./.github/workflows/codeql-analysis.yml")
           workflow := yaml.unmarshal(workflowstr)
           steps := workflow.jobs.analyze.steps[i]
           contains(steps.uses, "github/codeql-action/analyze@")
